--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,16 @@ paginate: 5
 navigation:
  - title: Home
    url: /
+ - title: Events
+   url: /events
  # - title: Minutes
  #   url: /minutes
  # - title: News & Events
  #   url: /news-events
  - title: Contact
    url: /contact
+ - title: Join PTA!
+   url: /assets/join-pta.docx
 
 social:
    twitter: principalles
