--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ navigation:
    url: /
  - title: Events
    url: /events
+ - title: Volunteering
+   url: /volunteering
  # - title: Minutes
  #   url: /minutes
  # - title: News & Events
