--- a/_data/volunteer.yaml
+++ b/_data/volunteer.yaml
@@ -1,4 +1,9 @@
 -
+  title: LES Science and Technology Expo
+  date: 2016-02-18
+  description: The Science Expo Committee is looking for parent volunteers to help on Expo Day!  We need help on Thursday February 18th, both during the school day to help set up the gym and cafeteria and to help kids set up their projects, and during the Expo itself to help "mentor" our young scientists and have them talk about their projects.  Please follow the link above to sign up -- any and all help is appreciated!
+  url: http://www.SignUpGenius.com/go/10C0E44A5A82AA64-2016
+-
   title: Volunteer "Elves" needed
   date: [2015-12-9, 2015-12-10, 2015-12-11]
   description: Volunteers help students find and purchase special gifts for their family and friends. Seeing the excitement of the child picking out a gift for someone on their list is priceless.  Please consider donating an hour or two of your  time to make the Holiday Shop a success for all!
