--- a/_data/volunteer.yaml
+++ b/_data/volunteer.yaml
@@ -13,3 +13,8 @@
   date: 2015-12-14
   description: The hospitality committee will be hosting our annual LES Staff Holiday Dessert Day on Monday, December 14th from 11am--2pm in the staff lounge. We are requesting homemade or store bought dessert donations. Thank you for your support and Happy Holidays!!
   url: http://pleasedonate.bringit.bz/public/b4e390
+-
+  title: Calling all you SUPER PARENTS! We need volunteers to help make the Spring Festival a success.
+  date: 2016-05-21
+  description: Please Help!!  We are in need of ADULT Volunteers for the 2016 Spring Festival.  Please volunteer so we do not have to cut games or activities.  If you can donate your time anywhere between 11-5 on May 21st, it would be much appreciated!
+  url: http://www.signupgenius.com/go/30e0c45a5ac2aa02-2016
